NLP TP/texts/robotics/robotics.stackexchange_0000027999.txt
Q:

unable to install baxter with ros indigo and gazebo 7

When i try to build the baxter simulator i'm getting lot of errors eg:
/usr/include/gazebo-7/gazebo/common/Event.hh:664:14: error: ‘class gazebo::event::EventTPrivate<void(std::basic_string<char>)>’ has no member named ‘connections’
       if (it != this->myDataPtr->connections.end())
              ^
/usr/include/gazebo-7/gazebo/common/Event.hh:667:9: error: request for member ‘push_back’ in ‘((gazebo::event::EventT<void(std::basic_string<char>)>*)this)->gazebo::event::EventT<void(std::basic_string<char>)>::myDataPtr->gazebo::event::EventTPrivate<void(std::basic_string<char>)>::connectionsToRemove’, which is of non-class type ‘int’
         this->myDataPtr->connectionsToRemove.push_back(it);

Is this necessary to use gazebo 2 for baxter simulator, i'm using gazebo 7 with ros indigo from so many months. I was trying to use this to see how ros is controlling the robot in gazebo in high level and how joint trajectorys have been executed, but seems like i have to reinstall my gazebo.

Originally posted by hari1234 on Gazebo Answers with karma: 56 on 2017-01-09
Post score: 0

A:

There are five major versions between gazebo2 and gazebo7 which implies 5 cycles of changes in the API/ABI, I would say that obtaining a failure in compilation of third party code wrote for gazebo2 is somehow expected.
If you goal is to make the Baxter simulation code with gazebo7 then you will need to patch the errors, You will find useful the gazebo migration guide. For keeping compatibility between all the gazebo versions in the code of Baxter I would suggest to use conditionals (there are examples in the gazebo_ros_pkgs repository).
If you don't want to spend time into porting Baxter simulation code to gazebo7 and just want to use it out of the box then yes, the way is to uninstall gazebo7 and install gazebo2.

Originally posted by Jose Luis Rivero with karma: 1485 on 2017-01-09
This answer was ACCEPTED on the original site
Post score: 2

